added ability to search for books

--- a/langs/swahili.xml
+++ b/langs/swahili.xml
@@ -44,7 +44,7 @@
     <string name="book_title">Jina la Kitabu</string>
     <string name="book_author">Wafanyakazi wa Kitabu</string>
     <string name="book_category">Aina ya Kitabu</string>
-    <string name="book_total">Jumla ya Vitabu</string>
+    <string name="book_total">Jumla ya Vitabu Vimeigizwa</string>
     <string name="cancel">Ghairi</string>
     <string name="is_invalid">Ni Batili</string>
     <string name="you_need_to_select_at_least_a_single_cell">Unahitaji angalau kuchagua seli moja</string>
