--- a/langs/english.xml
+++ b/langs/english.xml
@@ -44,7 +44,7 @@
     <string name="book_title">Book Title</string>
     <string name="book_author">Book Author(s)</string>
     <string name="book_category">Book Category</string>
-    <string name="book_total">Book Total</string>
+    <string name="book_total">Book Total Borrowed</string>
     <string name="cancel">Cancel</string>
     <string name="is_invalid">Is Invalid</string>
     <string name="you_need_to_select_at_least_a_single_cell">You need to at least select a single cell</string>
